[gd_scene load_steps=3 format=2]

[ext_resource path="res://tests/movement/MovementStat.tscn" type="PackedScene" id=1]
[ext_resource path="res://tests/movement/MovementTool.gd" type="Script" id=2]

[node name="MovementTool" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1679.0
margin_bottom = -1008.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 241.0
margin_bottom = 268.0
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 241.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_right = 241.0
margin_bottom = 20.0

[node name="Speed" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 241.0
margin_bottom = 48.0

[node name="Force" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 241.0
margin_bottom = 76.0

[node name="Mass" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 241.0
margin_bottom = 104.0

[node name="Rotation" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 241.0
margin_bottom = 132.0

[node name="Arrival Dist" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 241.0
margin_bottom = 160.0

[node name="Follow Dist" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 164.0
margin_right = 241.0
margin_bottom = 188.0

[node name="Sep Radius" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 241.0
margin_bottom = 216.0

[node name="Max Sep" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 241.0
margin_bottom = 244.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 241.0
margin_bottom = 268.0
text = "PRINT"
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Speed" to="." method="_on_Speed_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Force" to="." method="_on_Force_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Mass" to="." method="_on_Mass_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Rotation" to="." method="_on_Rotation_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Arrival Dist" to="." method="_on_Arrival_Dist_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Follow Dist" to="." method="_on_Follow_Dist_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sep Radius" to="." method="_on_Sep_Radius_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Max Sep" to="." method="_on_Max_Sep_value_changed"]
